Tests/CompilerTests/negative/polycephalic-trait.hylo
//! no-std

trait P<T> {
  fun f() -> T
}

struct A {
  public memberwise init
}

fun check<T>(x: T) {}

fun g<X, Y where X is P<Y>>(x: X) {
  check<Y>(x.f())
}

given A is P<Void> {
  public fun f() -> Void { () }
}

public fun main() {
  g<A, Void>(A())
  g<A, A>(A())
  g<A, _>(A())
}
